# pycg-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  report.yml
.hive/: .gitignore
benchmarks/: bench.py  compare.py  setup.sh
docs/: json-contract.md  query-contracts.md  roadmap.md
docs/json-schema/: pycg-callees-v1.schema.json  pycg-callers-v1.schema.json  pycg-graph-v1.schema.json  pycg-neighbors-v1.schema.json  pycg-path-v1.schema.json  pycg-summary-v1.schema.json  pycg-symbols-in-v1.schema.json
scripts/: accuracy_report.py  bootstrap-corpora.sh  generate_report.py
src/: analyzer.rs  intern.rs  lib.rs  main.rs  node.rs  query.rs  scope.rs  visgraph.rs
src/analyzer/: mod.rs  mro.rs  pipeline.rs  postprocess.rs  prepass.rs  resolution.rs  state.rs  util.rs
src/writer/: mod.rs
tests/: cli.rs  integration.rs  json_contract_schema.rs  query_cli.rs  query_contract_schema.rs
tests/fixtures/: accuracy_cases.json
tests/integration/: accuracy.rs  accuracy_cases.rs  common.rs  core.rs  corpus.rs  features.rs  fixture_coverage.rs  library_surface.rs
tests/snapshots/: cli__cli_module_graph_json.snap  cli__cli_symbol_graph_json.snap
tests/test_code/: accuracy_alias.py  accuracy_branch.py  accuracy_chained_call.py  accuracy_container.py  accuracy_decorator.py  accuracy_factory.py  accuracy_higher_order.py  accuracy_multi_return.py  accuracy_precision_extra.py  accuracy_star_src.py  accuracy_star_user.py  diagnostics_multi_return_three.py  features.py  regression_issue2.py  regression_issue3.py  regression_issue5.py  star_all_src.py  (+3 more)
(+3 files in other folders)
