[package]
name = "pycg-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "pycg"
path = "src/main.rs"

[lib]
name = "pycg_rs"
path = "src/lib.rs"

[dependencies]
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", rev = "359981b" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", rev = "359981b" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff.git", rev = "359981b" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", rev = "359981b" }
petgraph = "0.7"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = "1"
tempfile = "3"
assert_cmd = "2"
